@@ -441,3 +441,8 @@
 
 - maqueta: eliminar restos de algoritmo bellman_ford
 
+17 de febrero de 2017
+
+- con_puente: Mediciones de nuevas locomotoras; Documentación
+
+
